test(apiService): Adiciona testes unitarios para as funções que processam dados da api

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   http: ^1.2.1
   intl: ^0.20.2
   provider: ^6.1.1
+  mockito: ^5.4.2
+  build_runner: ^2.4.6
 
   flutter_localizations:
     sdk: flutter
